# Text-Driven-Multi-View-Fashion-Editing

./: .gitignore  README.md  captions_for_MVAdapter.json  get_gemma_captions.py  partitioning.py  pyproject.toml  remove_garment_mv.py  remove_outer_front_view_kontext.py
metrics/: get_gemma_metrics.py  get_metrics_with_cpu.py  plots_psnr_ssim_ious.py  run_mvgbench_consistency_eval.py
utils/: create_masks_from_seg.py
